# EAST

./: .gitignore  README.md  demo.py  detect.py  pyproject.toml
.streamlit/: config.toml
east/: detector.py  drawer.py  model.py
scripts/: download.sh
